value changed online

--- a/ATS.HTML
+++ b/ATS.HTML
@@ -27,7 +27,7 @@
             <label for="cover-letter">Cover Letter:</label>
             <textarea id="cover-letter" required></textarea>
             
-            <input type="submit" value="jebulin"> 
+            <input type="submit" value="submit"> 
         </form>
     </div>
 </body>
